--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
           />
         </label>
       </div>
-
+      <div>
+        <label form="id_data"
+          >Data de Nascimento: <input type="date" name="data" id="id_data" />
+        </label>
+      </div>
       <div>
         <p>Vagas disponíveis</p>
         <label id="id_frontend">Dev Front-end JR</label>
@@ -77,7 +81,7 @@
     </form>
 
     <script type="module">
- import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
       import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-analytics.js";
       import {
         getDatabase,
@@ -86,26 +90,21 @@
       } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-database.js";
 
       const firebaseConfig = {
+        apiKey: "AIzaSyAa8kf78_Gq83Y_SjSFstvyvH0RhDGfCb0",
 
-apiKey: "AIzaSyAn7O4R-DSvRSssvdo6az9pzDKmB8HfNSQ",
+        authDomain: "massa-1533a.firebaseapp.com",
 
-authDomain: "sadas-c33e7.firebaseapp.com",
+        projectId: "massa-1533a",
 
-databaseURL: "https://sadas-c33e7-default-rtdb.firebaseio.com",
+        storageBucket: "massa-1533a.appspot.com",
 
-projectId: "sadas-c33e7",
+        messagingSenderId: "508765706875",
 
-storageBucket: "sadas-c33e7.appspot.com",
+        appId: "1:508765706875:web:a3110452384707f9b1e0de",
 
-messagingSenderId: "704895285365",
+        measurementId: "G-97W3KN594R",
+      };
 
-appId: "1:704895285365:web:a836ddf9ca798d6628603c",
-
-measurementId: "G-L37W93BCD8"
-
-};
-
-   
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const database = getDatabase();
@@ -117,6 +116,7 @@ measurementId: "G-L37W93BCD8"
         let nome = form.nome.value;
         let vaga = form.radio.value;
         let curso = form.curso_textarea.value;
+        let data = form.data.value;
 
         let checks = document.querySelectorAll('[type="checkbox"]:checked');
         let vetor_habilidades = [];
@@ -124,20 +124,25 @@ measurementId: "G-L37W93BCD8"
           vetor_habilidades.push(checkbox.value);
         });
 
-        // let temp = document.querySelectorAll(`[name=habilidades]:checked`);
-        // temp.forEach((valor, index)=>{
-        // vetor[index] = valor.value;
-        // console.log(index, valor.value);
-
-        alert(`Nome: ${nome} \nVaga: ${vaga} \nCurso: ${curso} \nHabilidades: ${vetor_habilidades.join(", ")}`);
-        console.log(`Nome: ${nome} \nVaga: ${vaga} \nCurso: ${curso} \nHabilidades: ${vetor_habilidades.join(", ")}`);
+        alert(
+          `Dados enviados com sucesso!\nNome: ${nome} \nData de nascimento: ${data} \nVaga: ${vaga}\nHabilidades: ${vetor_habilidades.join(
+            ", "
+          )} \nCurso: ${curso}`
+        );
+        console.log(
+          `Nome: ${nome} \n Data de nascimento: ${data} \nVaga: ${vaga} \nHabilidades: ${vetor_habilidades.join(
+            ", "
+          )} \nCurso: ${curso} 
+        `
+        );
 
         const usersRef = ref(database, "users");
         push(usersRef, {
           nome: nome,
+          data: data,
           vaga: vaga,
+          habilidades: vetor_habilidades,
           curso: curso,
-          habilidades: vetor_habilidades
         })
           .then(() => {
             console.log("Dados enviados com sucesso!");
@@ -146,9 +151,6 @@ measurementId: "G-L37W93BCD8"
             console.error("Erro ao enviar dados:", error);
           });
       });
-      
     </script>
   </body>
 </html>
-
-
